fix overflow footer

--- a/baizonn/sass/style.css
+++ b/baizonn/sass/style.css
@@ -1653,6 +1653,7 @@ blockquote, q {
   }
   .site-footer > nav ul {
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
   .site-footer > nav ul a {
